[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copykat-python"
version = "1.1.0.post1"
description = "Python port of the R copykat package"
readme = "README.md"
requires-python = ">=3.10"
license = "Artistic-2.0"
license-files = ["LICENSE"]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pheatmap-python>=1.0",
    "scales-python>=1.4",
    "pyarrow>=12.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-jupyter"]

[tool.hatch.build.targets.sdist]
include = ["copykat/", "tests/"]

[tool.hatch.build.targets.wheel]
packages = ["copykat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
